@@ -536,7 +536,9 @@ Some macros are stripped of potentially dangerous shell metacharacters before be
 
 </ol>
 
-
+<p>
+Additionally, any macros that contain <a href="customobjectvars.html">custom variables</a> are stripped for safety and security.
+</p>
 
 <p>
 
